--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0"
-    implementation "androidx.appcompat:appcompat:1.0.0-beta01"
+    implementation "androidx.appcompat:appcompat:1.0.0-rc01"
     implementation "androidx.constraintlayout:constraintlayout:1.1.2"
-    implementation "androidx.recyclerview:recyclerview:1.0.0-beta01"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-beta01"
-    implementation "androidx.core:core-ktx:1.0.0-beta01"
+    implementation "androidx.recyclerview:recyclerview:1.0.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-rc01"
+    implementation "androidx.core:core-ktx:1.0.0-rc01"
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
     implementation "com.squareup.okhttp3:okhttp:3.10.0"
@@ -46,7 +46,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.7.1"
     implementation "com.github.bumptech.glide:okhttp3-integration:4.7.1"
     testImplementation "junit:junit:4.12"
-    testImplementation "androidx.arch.core:core-testing:2.0.0-beta01"
+    testImplementation "androidx.arch.core:core-testing:2.0.0-rc01"
     androidTestImplementation "androidx.test:runner:1.1.0-alpha4"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha4"
 }
